--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "owasp-nodejs-goat",
+  "name": "cs132security",
   "version": "1.3.0",
-  "description": "A tool to learn OWASP Top 10 for node.js developers",
+  "description": "CS132 Security Lab; graciously based on OWASP Top 10 for Node apps.",
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
